@@ -20,6 +20,12 @@
 		  <b>#Stages:</b>
 		  <%=h @recipe.stages.count %>
 		</p>
+		<p>
+		  <b>Versions:</b>
+		  <%= select_tag "version", options_for_select(all_recipe_versions, params[:version]), :id => "recipe_version" %>
+		  <%= link_to_function "Show", "location.href='#{recipe_path(@recipe)}?version=' + $F('recipe_version')", :class => "arrow_link" %>
+		  <%= link_to "Rollback", edit_recipe_path(@recipe, :version => params[:version]), :class => "arrow_link" if not_latest_version and current_user.admin? %>
+    </p>
 		<% if current_user.admin? %>
   		<br />
 	  	<%= link_to 'Edit Recipe', edit_recipe_path(@recipe), :class => 'arrow_link' %> |
