@@ -76,7 +76,7 @@ end
 
 # Include your application configuration below
 
-WEBISTRANO_VERSION = '1.3'
+WEBISTRANO_VERSION = '1.4'
 
 ActiveSupport::CoreExtensions::Time::Conversions::DATE_FORMATS.update(:log => '%Y-%m-%d %H:%M')
 ActiveSupport::CoreExtensions::Time::Conversions::DATE_FORMATS.update(:date_with_day => '%Y-%m-%d')
